Fix: update Giscus configuration for blog layout with new repository and category IDs

--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -98,10 +98,10 @@ const readableDate = date.toLocaleDateString('en-us', {
       <script
         is:inline
         src='https://giscus.app/client.js'
-        data-repo='aleksa-codes/astro-portfolio-v2'
-        data-repo-id='R_kgDONpo00A'
+        data-repo='aleksa-codes/astro-portfolio'
+        data-repo-id='R_kgDOH9bAGg'
         data-category='Announcements'
-        data-category-id='DIC_kwDONpo00M4CmCQF'
+        data-category-id='DIC_kwDOH9bAGs4CmQFv'
         data-mapping='pathname'
         data-strict='0'
         data-reactions-enabled='1'
