Fix: update footer link to point to the correct GitHub repository

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,4 +1,4 @@
-<footer class='mt-16 w-full sm:mt-4' aria-labelledby='footer-heading'>
+<footer class='mt-16 w-full sm:mt-4'>
   <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 200'>
     <path
       class='scale-y-75 text-slate-200 dark:text-slate-800'
@@ -13,7 +13,7 @@
       <div class='font-medium'>
         © <span id='current-year'></span> Code by{' '}
         <a
-          href='https://github.com/aleksa-codes/astro-portfolio-v2'
+          href='https://github.com/aleksa-codes/astro-portfolio'
           target='_blank'
           rel='noopener noreferrer'
           class='hover:underline'
