chore: update classes after tailwind v4 upgrade

--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -28,7 +28,7 @@ const {
 } = Astro.props;
 
 const baseClassName = cn(
-  'inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-base font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-neutral focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-5 [&_svg]:shrink-0 cursor-pointer',
+  'inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-base font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-neutral focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-5 [&_svg]:shrink-0 cursor-pointer',
   size === 'sm' && 'h-9 px-3',
   size === 'default' && 'h-10 px-4 py-2',
   size === 'lg' && 'h-11 px-8',
