--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -28,7 +28,7 @@ const isCurrentPage = (href: string) => {
 <nav
   id='navbar'
   data-scroll='top'
-  class='data-[scroll=scrolled]:border-base-300 data-[scroll=scrolled]:bg-base-100/80 sticky top-0 z-40 w-full pt-4 pb-2 data-[scroll=scrolled]:border-b data-[scroll=scrolled]:shadow data-[scroll=scrolled]:backdrop-blur-sm md:pt-6 md:pb-4'
+  class='data-[scroll=scrolled]:border-base-300 data-[scroll=scrolled]:bg-base-100/80 sticky top-0 z-40 w-full pt-4 pb-2 data-[scroll=scrolled]:border-b data-[scroll=scrolled]:shadow-sm data-[scroll=scrolled]:backdrop-blur-xs md:pt-6 md:pb-4'
   aria-label='Main navigation'
 >
   <div class='container flex items-center justify-between'>
@@ -80,7 +80,7 @@ const isCurrentPage = (href: string) => {
                     <a
                       href={item.href}
                       class={cn(
-                        'text-base-content/80 hover:bg-base-200 hover:text-base-content focus:bg-base-200 focus:text-base-content block rounded-md px-4 py-2 text-sm transition-colors focus:outline-none',
+                        'text-base-content/80 hover:bg-base-200 hover:text-base-content focus:bg-base-200 focus:text-base-content block rounded-md px-4 py-2 text-sm transition-colors focus:outline-hidden',
                         isCurrentPage(item.href) && 'text-secondary font-medium',
                       )}
                       role='menuitem'
@@ -238,7 +238,7 @@ const isCurrentPage = (href: string) => {
             <div>
               {dropdown ? (
                 <button
-                  class='group hover:text-secondary focus-visible:ring-primary flex w-full items-center justify-between rounded-md py-2 focus:outline-none focus-visible:ring-2'
+                  class='group hover:text-secondary focus-visible:ring-primary flex w-full items-center justify-between rounded-md py-2 focus:outline-hidden focus-visible:ring-2'
                   data-nav-trigger
                   data-state='closed'
                   aria-expanded='false'
@@ -277,7 +277,7 @@ const isCurrentPage = (href: string) => {
                     <a
                       href={item.href}
                       class={cn(
-                        'hover:text-secondary text-base-content/80 block py-2 text-sm transition-colors focus:outline-none',
+                        'hover:text-secondary text-base-content/80 block py-2 text-sm transition-colors focus:outline-hidden',
                         isCurrentPage(item.href) && 'text-secondary font-medium',
                       )}
                       role='menuitem'
