--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -226,7 +226,7 @@ const funFacts = [
                   />
                   <div
                     class={cn(
-                      'absolute inset-0 -z-10 opacity-0 blur',
+                      'absolute inset-0 -z-10 opacity-0 blur-sm',
                       'transition-opacity duration-300 ease-out',
                       'group-hover:opacity-50',
                       fact.color.replace('group-hover:', ''),
