--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -119,7 +119,7 @@ const projects = [
       <div class='flex flex-wrap gap-4 pt-2'>
         {
           categories.map((category) => (
-            <div class='bg-base-200 hover:bg-base-300 flex items-center gap-2 rounded-full px-4 py-2 transition-all hover:shadow-sm'>
+            <div class='bg-base-200 hover:bg-base-300 flex items-center gap-2 rounded-full px-4 py-2 transition-all hover:shadow-xs'>
               <Icon name={category.icon} class='size-4' />
               <span class='text-sm font-medium'>{category.name}</span>
             </div>
