--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -21,7 +21,7 @@ import WinterAvatar from '@/assets/WinterAvatar.svg';
         {[11, 0, 1].includes(new Date().getMonth()) ? <WinterAvatar /> : <Avatar />}
       </div>
       <div class='space-y-4 text-center md:text-left'>
-        <p class='text-base-content/80 max-w-xl text-lg leading-relaxed'>
+        <p class='max-w-xl text-lg leading-relaxed'>
           Feel free to reach out using the form below. I am always interested in new <span class='highlight'
             >ideas and opportunities!</span
           >
