--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -109,7 +109,7 @@ const projects = [
     <Breadcrumb />
     <div class='space-y-6'>
       <h1 class='text-4xl font-extrabold tracking-tight lg:text-5xl'>Projects</h1>
-      <p class='text-base-content/80 max-w-[750px] text-lg leading-relaxed'>
+      <p class='text-base-content max-w-[750px] text-lg leading-relaxed'>
         As a developer who loves exploring new technologies, these projects represent my journey of continuous learning
         and innovation. From Websites to AI-powered tools, each project is crafted with <span class='highlight'
           >passion for clean code</span
@@ -170,7 +170,7 @@ const projects = [
                       </Badge>
                     )}
                   </div>
-                  <p class='text-base-content/80 text-lg leading-relaxed' set:html={project.description} />
+                  <p class='text-base-content text-lg leading-relaxed' set:html={project.description} />
                 </div>
 
                 {/* Tags */}
