--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -58,7 +58,10 @@ const readableDate = date.toLocaleDateString('en-us', {
     <div class='mx-auto flex max-w-3xl flex-col items-center space-y-4 text-center'>
       <h1 class='text-base-content max-w-2xl text-4xl font-extrabold lg:text-5xl'>{title}</h1>
       <div class='text-base-content/80 flex items-center justify-center gap-2 text-sm'>
-        <time datetime={date.toISOString()}>{readableDate}</time>
+        <span class='flex items-center gap-1'>
+          <Icon name='lucide:calendar' class='size-4' />
+          <time datetime={date.toISOString()}>{readableDate}</time>
+        </span>
         <div>•</div>
         <span class='flex items-center gap-1'>
           <Icon name='lucide:clock' class='size-4' />
