fix: add rounded corners to images in blog layout

--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -78,7 +78,7 @@ const readableDate = date.toLocaleDateString('en-us', {
     </div>
 
     <article
-      class='prose prose-h2:text-base-content prose-h1:text-base-content prose-h3:text-base-content prose-h4:text-base-content prose-a:text-base-content lg:prose-lg dark:prose-invert prose-code:before:hidden prose-code:after:hidden prose-strong:text-base-content prose-pre:pt-8 max-w-full'
+      class='prose prose-h2:text-base-content prose-h1:text-base-content prose-h3:text-base-content prose-h4:text-base-content prose-a:text-base-content lg:prose-lg dark:prose-invert prose-code:before:hidden prose-code:after:hidden prose-strong:text-base-content prose-pre:pt-8 prose-img:rounded-md max-w-full'
     >
       <slot />
     </article>
